--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -4,6 +4,9 @@ import { getCollection, getEntry, render } from "astro:content";
 
 // export const prerender = true;
 
+export const prerender = false;
+
+/*
 export async function getStaticPaths() {
   const pages = await getCollection("pages");
   return pages
@@ -19,20 +22,24 @@ export async function getStaticPaths() {
       };
     });
 }
+*/
 
+type Props = { page: CollectionEntry<"pages"> };
 const { slug } = Astro.params;
-let page = Astro.props.page;
 
-if (!page) {
-  const lookupId = slug === undefined ? "homepage" : slug;
-  page = await getEntry("pages", lookupId);
+/* This logic now runs on the Server Lambda */
+let page;
+if (!slug) {
+  page = await getEntry("pages", "homepage");
+} else {
+  page = await getEntry("pages", slug);
 }
 
 if (!page) {
   return Astro.redirect("/404");
 }
 
-const { Content } = await render(page);
+const { Content } = await page.render();
 ---
 
 <Flow frontmatter={page}>
