--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,9 +1,11 @@
 ---
-import { getEntry } from "astro:content";
+import Flow from "@/layouts/Flow.astro";
+import { getEntry, render } from "astro:content";
 
 const page = await getEntry("pages", "404");
 
-const { Content } = await page.render();
+const { Content } = await render(page);
 ---
-
+<Flow frontmatter={page}>
 <Content />
+</Flow>
