make ssr contact page

--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -6,6 +6,7 @@ export async function getStaticPaths() {
   const pages = await getCollection("pages");
   return pages
     .filter((page) => page.id !== "404.md")
+    .filter((page) => page.id !== "contact")
     .map((page) => {
       const slug =
         page.id === "homepage.md" ? undefined : page.id.replace(/\.mdx?$/, "");
