--- a/src/pages/blog/[post].astro
+++ b/src/pages/blog/[post].astro
@@ -2,6 +2,8 @@
 import BlogLayout from "@/layouts/BlogLayout.astro";
 import { getCollection, getEntry, type CollectionEntry } from "astro:content";
 
+export const prerender = true;
+
 export async function getStaticPaths() {
   const blogs = await getCollection("blogs");
 
