--- a/src/pages/blog/[post].astro
+++ b/src/pages/blog/[post].astro
@@ -1,33 +1,39 @@
 ---
 import BlogLayout from "@/layouts/BlogLayout.astro";
-import { getCollection, type CollectionEntry, getEntry } from "astro:content";
+import { getCollection, getEntry, type CollectionEntry } from "astro:content";
+
+export const prerender = true;
+
 export async function getStaticPaths() {
   const blogs = await getCollection("blogs");
+
   return blogs
-    .filter(
-      (post) =>
-        String(import.meta.env.IS_PREVIEW === "true") ||
-        Date.now() > new Date(post.data.date).getTime()
-    )
+    .filter((post) => {
+      const isPreview = import.meta.env.IS_PREVIEW === "true";
+      const isPublished = Date.now() > new Date(post.data.date).getTime();
+      return isPreview || isPublished;
+    })
     .map((post) => {
+      const slug = post.id.replace(/\.mdx?$/, "");
       return {
-        params: {
-          post: post.slug,
-        },
-        props: {
-          post,
-        },
+        params: { post: slug },
+        props: { post },
       };
     });
 }
-type Props = { post: CollectionEntry<"blogs"> };
-const { post } = Astro.params;
-let data;
-if (import.meta.env.SSR) {
-  data = await getEntry("blogs", post);
-} else {
-  data = Astro.props.post;
+
+const { post: postParam } = Astro.params;
+let data: CollectionEntry<"blogs"> | undefined = Astro.props.post;
+
+if (!data && postParam) {
+  data = await getEntry("blogs", postParam);
 }
+
+if (!data) {
+  return Astro.redirect("/404");
+}
+
+const finalPost = data as CollectionEntry<"blogs">;
 ---
 
-<BlogLayout post={data} />
+<BlogLayout post={finalPost} />
